--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -14,7 +14,7 @@
     &__img {
         width: 180px;
         height: 180px;
-        object-fit: contain;
+        object-fit: cover;
     }
     &__info {
         display: grid;
